# ampoule-ui

./: .coolify-deploy.md  .coolify-nixpacks.md  .gitignore  CLAUDE.md  MANIFEST.in  README.md  components.html-data.json  docker-compose.yml  nixpacks.toml  package-lock.json  package.json  pyproject.toml  tailwind.config.js
demo_project/: pyproject.toml  requirements.txt
demo_project/demo/: forms.py  urls.py  views.py
demo_project/demo/templates/demo/: login.html  nutriassiette.html  ui_blocks.html  ui_blocks_category.html  ui_blocks_detail.html
demo_project/demo/templates/demo/docs/: base_page.html  index.html
demo_project/demo/templates/demo/docs/components/: avatar.html  badge.html  breadcrumbs.html  button.html  combobox.html  command-palette.html  dropdown.html  filters.html  modal.html  navbar.html  pricing-plan.html  pricing-table.html  range.html  table.html  text.html  toast.html
demo_project/demo/templates/demo/docs/forms/: radio.html
demo_project/demo/templates/demo/docs/getting-started/: installation.html
demo_project/demo/templates/demo/docs/layouts/: footer.html  navbar.html  sidebar.html
demo_project/demo/templates/demo/docs/partials/: sidebar.html
demo_project/demo/templates/demo/docs/ui-blocks/: cards.html  dashboards.html  headers.html
demo_project/demo/templates/demo/layouts/: navbar_demo1.html  navbar_demo2.html  sidebar_demo1.html
demo_project/demo/templates/demo/partials/: login_form.html
demo_project/demo_project/: settings.py  urls.py
demo_project/templates/: base.html
django_components_ui/: __init__.py  apps.py  urls.py
(+67 files in other folders)
